--- a/index.ipynb
+++ b/index.ipynb
@@ -1370,7 +1370,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number = number\n",
-    "    near_neighbors = sorted(distance_all(first_neighbor, neighbors))\n",
+    "    near_neighbors = sorted(distance_all(first_neighbor, neighbors), key=lambda neighbor: neighbor['distance'])\n",
     "    return near_neighbors[:number]"
    ]
   },
