--- a/index.ipynb
+++ b/index.ipynb
@@ -1364,30 +1364,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    number = number\n",
-    "    near_neighbors = sorted(distance_all(first_neighbor, neighbors), key=lambda neighbor: neighbor['distance'], rev)\n",
+    "    near_neighbors = sorted(distance_all(first_neighbor, neighbors), key=lambda neighbor: neighbor['distance'])\n",
     "    return near_neighbors[:number]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Edgar', 'avenue': 6, 'street': 13, 'distance': 5.385164807134504},\n",
-       " {'name': 'Suzie', 'avenue': 1, 'street': 11, 'distance': 4.242640687119285},\n",
+       "[{'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
        " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
